update api to better match requirements, add testing