@@ -4,11 +4,14 @@ import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.data.geo.Metric;
 
-import java.sql.Timestamp;
+import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
@@ -29,135 +32,141 @@ public class WeatherServiceTests {
     @Test
     public void testCalculateAverage() {
         Integer sensorId = 1;
-        List<WeatherSensorReading> weatherDataList = Arrays.asList(
-            new WeatherSensorReading(
-                sensorId, 20.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            )
-            , new WeatherSensorReading(
-                sensorId, 25.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ), new WeatherSensorReading(
-                sensorId, 30.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ));
+        List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
 
-        when(weatherSensorReadingDAO.findAllBySensorId(1)).thenReturn(weatherDataList);
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
 
-        double averageValue = weatherSensorService.getStatisticsForWeatherSensor(
-            sensorId,
-            Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.AVERAGE
+        Map<MetricType, Double> averageResult = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            31,
+            StatisticType.AVERAGE, 
+            List.of(MetricType.HUMIDITY)
         );
-
-        assertEquals(25.0, averageValue, 0.01);
+        
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.HUMIDITY, 30.0);
+        
+        assertEquals(expectedResult, averageResult);
     }
 
     @Test
     public void testCalculateMin() {
         Integer sensorId = 1;
-        List<WeatherSensorReading> weatherDataList = Arrays.asList(
-            new WeatherSensorReading(
-                sensorId, 20.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            )
-            , new WeatherSensorReading(
-                sensorId, 25.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ), new WeatherSensorReading(
-                sensorId, 30.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ));
+         List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
 
-        when(weatherSensorReadingDAO.findAllBySensorId(1)).thenReturn(weatherDataList);
+        
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
 
-        double minValue = weatherSensorService.getStatisticsForWeatherSensor(
-            sensorId,
-             Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.MIN
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.UV_INDEX, 0.0);
+
+        Map<MetricType, Double> minResult = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            31,
+            StatisticType.MIN, 
+            List.of(MetricType.UV_INDEX)
         );
 
-        assertEquals(20.0, minValue, 0.01);
+
+        assertEquals(expectedResult, minResult);
     }
 
     @Test
     public void testCalculateMax() {
         Integer sensorId = 1;
-        List<WeatherSensorReading> weatherDataList = Arrays.asList(
-            new WeatherSensorReading(
-                sensorId, 20.0, Timestamp.valueOf("2023-06-10 10:00:00")
-            )
-            , new WeatherSensorReading(
-                sensorId, 25.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ), new WeatherSensorReading(
-                sensorId, 30.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ),
-            new WeatherSensorReading(
-                sensorId, 45.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ));
+         List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
 
-        when(weatherSensorReadingDAO.findAllBySensorId(1)).thenReturn(weatherDataList);
 
-        double maxValue = weatherSensorService.getStatisticsForWeatherSensor(
-            sensorId,
-            Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.MAX
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
+        
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.TEMPERATURE, 45.0);
+
+        Map<MetricType, Double> maxResult = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            31,
+            StatisticType.MAX, 
+            List.of(MetricType.TEMPERATURE)
         );
 
-        assertEquals(45.0, maxValue, 0.01);
+        assertEquals(expectedResult, maxResult);
     }
 
     @Test
     public void testCalculateSum() {
         Integer sensorId = 1;
-        List<WeatherSensorReading> weatherDataList = Arrays.asList(
-            new WeatherSensorReading(
-                sensorId, 20.0, Timestamp.valueOf("2023-06-10 10:00:00")
-            )
-            , new WeatherSensorReading(
-                sensorId, 25.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ), new WeatherSensorReading(
-                sensorId, 30.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ),
-            new WeatherSensorReading(
-                sensorId, 45.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ));
+         List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
 
-        when(weatherSensorReadingDAO.findAllBySensorId(1)).thenReturn(weatherDataList);
 
-        double sum = weatherSensorService.getStatisticsForWeatherSensor(
-            sensorId,
-             Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.SUM
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
+
+        Map<MetricType, Double> sumResults = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            31,
+            StatisticType.SUM, 
+            List.of(MetricType.HUMIDITY)
         );
 
-        assertEquals(100.0, sum, 0.01);
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.HUMIDITY, 120.0);
+
+        assertEquals(expectedResult, sumResults);
+    }
+
+    @Test
+    public void testMutlipleMetrics() {
+        Integer sensorId = 1;
+         List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
+
+
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
+
+        Map<MetricType, Double> sumResults = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            31,
+            StatisticType.SUM, 
+            List.of(MetricType.HUMIDITY, MetricType.TEMPERATURE, MetricType.UV_INDEX, MetricType.WIND_SPEED)
+        );
+
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.TEMPERATURE, 120.00, MetricType.UV_INDEX, 175.00, MetricType.WIND_SPEED, 240.00, MetricType.HUMIDITY, 120.0);
+
+        assertEquals(expectedResult, sumResults);
+    }
+
+    @Test
+    public void testDefaultDate() {
+        Integer sensorId = 1;
+         List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
+
+
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
+
+        Map<MetricType, Double> sumResults = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            null,
+            StatisticType.AVERAGE, 
+            List.of(MetricType.TEMPERATURE, MetricType.UV_INDEX, MetricType.WIND_SPEED, MetricType.HUMIDITY)
+        );
+
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.TEMPERATURE, 30.00, MetricType.UV_INDEX, 25.00, MetricType.WIND_SPEED, 30.00, MetricType.HUMIDITY, 30.0);
+
+        assertEquals(expectedResult, sumResults);
     }
 
      @Test
     public void testOnlyIncludeDatesInRange() {
         Integer sensorId = 1;
-        List<WeatherSensorReading> weatherDataList = Arrays.asList(
-            new WeatherSensorReading(
-                sensorId, 20.0, Timestamp.valueOf("2023-06-10 10:00:00")
-            )
-            , new WeatherSensorReading(
-                sensorId, 25.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ), new WeatherSensorReading(
-                sensorId, 30.0, Timestamp.valueOf("2023-06-15 10:00:00")
-            ),
-            new WeatherSensorReading(
-                sensorId, 45.0, Timestamp.valueOf("2024-06-15 10:00:00")
-            ));
+        List<WeatherSensorReading> weatherDataList = TestData.getTestWeatherDataList(List.of(sensorId));
 
-        when(weatherSensorReadingDAO.findAllBySensorId(1)).thenReturn(weatherDataList);
+        when(weatherSensorReadingDAO.findAllBySensorIdIn(List.of(1))).thenReturn(weatherDataList);
 
-        double averageValue = weatherSensorService.getStatisticsForWeatherSensor(
-            sensorId,
-             Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.AVERAGE
+        Map<MetricType, Double> averageResults = weatherSensorService.getStatisticsByMetric(
+            List.of(sensorId),
+            2,
+            StatisticType.SUM, 
+            List.of(MetricType.HUMIDITY)
         );
 
-        assertEquals(27.5, averageValue, 0.01);
+        Map<MetricType, Double> expectedResult = Map.of(MetricType.HUMIDITY, 120.00);
+
+
+        assertEquals(expectedResult, averageResults);
     }
 
     @Test
@@ -168,11 +177,11 @@ public class WeatherServiceTests {
 
         
         Exception exception = assertThrows(Exception.class, () -> {
-            weatherSensorService.getStatisticsForWeatherSensor(
-            99,
-             Timestamp.valueOf("2023-06-14 10:00:00"),
-            Timestamp.valueOf("2023-06-16 10:00:00"),
-            StatisticType.SUM
+            weatherSensorService.getStatisticsByMetric(
+            List.of(99),
+            31,
+            StatisticType.SUM, 
+            List.of(MetricType.HUMIDITY)
         );
         });
         assertEquals(exception.getMessage(), "No readings exist for this sensor in this time range.");
